@@ -3942,7 +3942,7 @@
                             <para>Fixed problem with symlink creation for multiple file selection</para>
                         </listitem>
                         <listitem>
-                            <para>Fixed problem #nnnn (...)</para>
+                            <para>Fixed bug #367744 (filename not correctly displayed)</para>
                         </listitem>
                     </itemizedlist>
                 </para>
