@@ -1,3 +1,8 @@
+2006-11-11  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/gnome-cmd-delete-dialog.c:
+	Fixed bug #367744 (filename not correctly displayed)
+
 2006-11-10  Piotr Eljasiak  <epiotr@use.pl>
 
 	* configure.in:
